# digital-lions

./: .env.dist  .env.template  .envrc  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  nixpacks.toml  package-lock.json  package.json
.github/workflows/: backend.yml  ci.yml  deploy.yml  frontend.yml
.husky/: pre-commit
app/: main.py
architecture/: README.md
architecture/decisions/: 00-initial-concept.md  01-teams-program-structure.md  01-teams-workshop-progress.md  (+4 more)
backend/: .dockerignore  .gitignore  Dockerfile  Makefile  alembic.ini  pyproject.toml  run.sh
backend/alembic/: env.py
backend/alembic/versions/: 0f9912fc5973_add_is_registered_flag_to_user_col.py  2024_10_06_1917-fa53dc00de3c_initial_database_schema.py  27dcd3e4daf0_.py  4c79ea1779c6_remove_programs_table.py  553181df401b_.py  5ae7d2fdf948_.py  73bb889a315e_update_prod.py  860e69d5c304_.py  88d441731023_remove_null_constraint.py  8c161ff0d706_remove_null_constraint.py  8dadfc4c35a2_remove_null_constraint_pt_2.py  abd3f0fa502b_remove_null_constraint_pt_2.py  b696385143e8_remove_dob_col.py  c999b3897e64_remove_workshop_cols.py  f0979b1a9eaa_add_workshop_col.py  f21f685055bd_set_cascading.py  f906168ff9dd_set_delete_cascading_v2.py
backend/app/: alembic.ini  dependencies.py  exceptions.py  logging.conf  main.py  models.py  settings.py
backend/app/alembic/: README  env.py
backend/app/alembic/versions/: 033ac48b6ad3_on_delete_child_cascade_attendance.py  09d9cb9ceb8f_cascade_on_delete_for_all_tablesa.py  168f2f4e6945_.py  2593b5493005_.py  2746d972cf2e_add_children_table.py  279a9f1e7cc7_add_community_id_to_team_table.py  27dcd3e4daf0_.py  336c0611be1f_add_teams_community_relatino.py  3d93f6a38942_remove_col.py  43d31a61becb_remove_col.py  4c79ea1779c6_remove_programs_table.py  553181df401b_.py  55fd10fc647e_.py  5ae7d2fdf948_.py  6e52151007ed_.py  73bb889a315e_update_prod.py  849e6031c717_.py  860e69d5c304_.py  88d441731023_remove_null_constraint.py  8c161ff0d706_remove_null_constraint.py  8dadfc4c35a2_remove_null_constraint_pt_2.py  953e4a87aee0_.py  97bed06b351a_.py  9e8334a25ba2_.py  a6c12150d823_.py  abd3f0fa502b_remove_null_constraint_pt_2.py  af56c0101e50_set_delete_cascading.py  b101c9f6da7f_.py  b696385143e8_remove_dob_col.py  c084769e5980_.py  c999b3897e64_remove_workshop_cols.py  e26dddda784f_.py  e2c5e1ae62d1_.py  e4de94849ffe_.py  e9c8c615f44c_.py  ef8cd6011991_remove_program_tablre.py  f0979b1a9eaa_add_workshop_col.py  f21f685055bd_set_cascading.py  f906168ff9dd_set_delete_cascading_v2.py
backend/app/core/: auth.py  dependencies.py  email.py  exceptions.py  settings.py
backend/app/database/: repositories.py  schema.py  session.py
backend/app/db/: models.py  schemas.py  session.py
backend/app/dependencies/: database.py  repositories.py  services.py
backend/app/models/: attendance.py  base.py  child.py  community.py  generic.py  out.py  program.py  team.py  user.py  workshop.py
backend/app/models/api/: __init__.py  child.py  community.py  generic.py  team.py  user.py
backend/app/models/db/: attendance.py  child.py  community.py  program.py  schema.py  team.py  user.py  workshop.py
backend/app/repositories/: __init__.py  attendance.py  base.py  child.py  children.py  community.py  program.py  team.py  user.py  workshop.py
backend/app/routers/: attendance.py  children.py  communities.py  health.py  teams.py  test.md  user.py  users.py  workshop.py  workshops.py
backend/app/services/: __init__.py  attendance.py  base.py  child.py  community.py  program.py  team.py  user.py  workshop.py
backend/app/templates/: register.html  reset_password.html
backend/config/: app.yml
backend/scripts/: populate_db.py  wipe_db.py
backend/tests/: conftest.py
backend/tests/routers/: test_children.py  test_communities.py  test_health.py  test_teams.py  test_users.py
db/: Dockerfile  schema.sql
frontend/: .dockerignore  .envrc  Dockerfile  Makefile  eslint.config.mjs  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
(+141 files in other folders)
