[tool.poetry]
name = "digital-lion"
version = "0.1.0"
description = ""
authors = ["Anne Lohmeijer <a.lohmeijer@hotmail.com>"]
readme = "README.md"
packages = [
    { include = "app"}
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
ruff = "^0.3.4"
psycopg2-binary = "2.9.5"
sqlmodel = "^0.0.18"
pydantic = {extras = ["email"], version = "^2.7.1"}
bcrypt = "^4.1.3"
alembic = "^1.13.1"
pydantic-settings = "^2.3.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pytest-mock = "^3.11.1"
pytest-env= "^1.1.3"

[tool.poetry.scripts]
start = "python run app.main:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["app"]

[tool.ruff]
fix = true
show-fixes = true
line-length = 99
target-version = "py310"

[tool.ruff.lint]
ignore = []
select = ["E", "F", "W", "I", "UP", "Q", "TID"]
